font changes/fallback image for vid

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -14,16 +14,19 @@
 
 .navbar-nav {
 	font-size: 18px;
-	color:black;
+	font-family: 'lato', sans-serif;
 }
 
-.navbar-default {
+.navbar-inverse {
 	margin-bottom: 0px;
-	color:black;
+	background-color: black;
 }
 
-.nav {
-	color:black;
+.navbar-brand {
+	font-family: 'lato', sans-serif;
+	text-transform: uppercase;
+	font-weight: 700;
+	letter-spacing: 1px;
 }
 
 
@@ -40,11 +43,11 @@
 
 #header-title {
 	float: left;
-	font-weight: bold;
+	font-weight: 900;
 	color: white;
-	font-family: Helvetica;
+	font-family: 'lato', sans-serif;
 	font-size: 4vw;
-	letter-spacing: 2px;
+	letter-spacing: 4px;
 }
 
 .hero-content {
@@ -54,7 +57,7 @@
 	flex-direction: row;
 	bottom: 10%;
 	position: relative;
-	font-family: roboto;
+	font-family: Helvetica;
 	letter-spacing: 1px;
 	width: 100%;
 	margin-left: auto;
@@ -62,7 +65,7 @@
 }
 
 .ucsb {
-	color: gold;
+	color: #FFB511;
 }
 
 
@@ -96,12 +99,15 @@ video {
 	padding-top: 60px;
 	color: #FFB511;
 	margin-bottom: 1%;
+	font-family: 'lato', sans-serif;
 }
 
 .content-text-small {
 	padding-right: 15px;
 	padding-left: 15px;
-	font-size: 15px;
+	font-size: 16px;
+	font-family: 'lato', sans-serif;
+	margin-bottom: 2%;
 }
 
 .content-text-small-black {
@@ -113,7 +119,7 @@ video {
 .content-text-apply {
 	padding-left: 15px;
 	line-height: 1.3ems;
-	margin-bottom: 4%;
+	margin-bottom: 2%;
 }
 
 .content-text-big {
@@ -184,12 +190,14 @@ video {
 
 .about-header {
 	font-weight: bold;
-	font-size: 30px;
+	font-size: 28px;
 	color: #FFB511;
+	font-family: 'lato', sans-serif;
 }
 
 .about-description {
 	margin-bottom: 4%;
+	font-family: 'Lato', sans-serif;
 }
 
 .about-link {
@@ -271,7 +279,7 @@ video {
 .secondary-content {
 	width: 100%;
 	padding-bottom: 30px;
-	margin-top: 2%;
+	margin-top: 4%;
 }
 
 .title-header {
@@ -285,20 +293,37 @@ video {
 	width: 14%;
 }
 
-.title-description{
+.title-description {
 	font-size: 2vw;
-	font-family: roboto;
-	color: white;
-	font-weight: bold;
+	color: black;
+	font-weight: 900;
 	text-transform: uppercase;
 	letter-spacing: 1px;
+	margin-bottom: 4%;
+	font-family: 'lato', sans-serif;
 }
 
 .secondary-header img {
 	padding:1px;
-	margin-bottom: 10px;	
-	border:1px solid #010a30;
-	background-color: grey;
+	margin-bottom: 10px;
+
+}
+
+.table-container {
+	margin-top: 4%;
+}
+
+.image-faculty {
+	border: 3px solid #021a40;
+	padding: 2px;
+}
+
+#contact-name {
+	font-family: 'lato', sans-serif;
+}
+
+p {
+	font-family: 'lato', sans-serif;
 }
 
 //////////////////////-FOOTER-///////////////////////
