--- a/templates/views/about.jade
+++ b/templates/views/about.jade
@@ -16,13 +16,13 @@ block content
 					p.about-description	Our team spans from engineering, neuroscience, physics, and computer science to biology, history, literature, communications, & arts. We assemble & support research teams to attack the most fundamental problems in brain science.
 			.secondary-header
 				p.about-header Leading the UCSB Brain Initiative are: 
-					table(cellpadding="1" cellspacing = "1")
+					table.table-container(cellpadding="1" cellspacing = "1")
 						tbody
 							tr								
 								td
-									img(src='/images/kosik.jpg')
+									img.image-faculty(src='/images/kosik.jpg')
 								td
-									img(src='/images/queenan.jpg')
+									img.image-faculty(src='/images/queenan.jpg')
 							tr
 								td(style="padding-right: 10px;")
 									p(id="contact-name")	<strong>Ken Kosik</strong>, PhD
@@ -42,4 +42,5 @@ block content
 					p Bren Hall, Isla Vista, CA, United States
 					p Bren 4330 
 					p 1.805.893.2726
-					p(style="font-style:italic;") BrainInitiativeUCSB@gmail.com
+					p 
+					a(href="mailto:BrainInitiativeUCSB@gmail.com") braininitiativeUCSB@gmail.com
