--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -4,9 +4,10 @@ block content
 	#index-body
 		#inner-container
 			.hero
-				video(autoplay loop)
+				video(autoplay loop poster="/..images/bi.png")
 						source(src="/../images/brain.mp4" type="video/mp4")
 						source(src="/../images/brain.ogg" type="video/ogg")
+						img(src="/../images/bi.png" title="your device does not support this video")
 				.hero-content
 					.text-center
 						#header-title BRAIN INITIATIVE // 
@@ -22,14 +23,13 @@ block content
 					.content-text-big 
 						p <strong>Assistant Professor</strong> - Department of Psychological & Brain Sciences
 						.content-text-apply
-							a.button(type="button" class="btn btn-default btn-lg" href='https://recruit.ap.ucsb.edu/apply/JPF00554') Apply Now
+							a.button(type="button" class="btn btn-default btn-lg" href='https://recruit.ap.ucsb.edu/apply/JPF00554' target="_blank") Apply Now
 						p <strong>Assistant Professor</strong> - College of Letters & Science
 						.content-text-apply
-							a.button(type="button" class="btn btn-default btn-lg" href='https://recruit.ap.ucsb.edu/apply/JPF00553') Apply Now
+							a.button(type="button" class="btn btn-default btn-lg" href='https://recruit.ap.ucsb.edu/apply/JPF00553' target="_blank") Apply Now
 						p <strong>Full, Associate, or Assistant Professor</strong> - The College of Engineering
 						.content-text-apply
 							a.button(type="button" class="btn btn-default btn-lg" href='mailto:braininitiativeUCSB@gmail.com') Apply Now
 					.content-text-small (Positions in the Colleges of Engineering and Letters & Sciences will 
 						|	be determined based on the applicant’s research area.)
-						p Questions can be emailed to queenan@brain.ucsb.edu
 
