--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -5,8 +5,8 @@ block content
 		#inner-container
 			.hero
 				video(autoplay loop poster="/..images/bi.png")
-						source(src="/../images/brain.mp4" type="video/mp4")
-						source(src="/../images/brain.ogg" type="video/ogg")
+						source(src="/../images/brain2.mp4" type="video/mp4")
+						source(src="/../images/brain2.ogg" type="video/ogg")
 						img(src="/../images/bi.png" title="your device does not support this video")
 				.hero-content
 					.text-center
