--- a/public/styles/site/text.less
+++ b/public/styles/site/text.less
@@ -361,7 +361,7 @@ h4.questioning {
 .hover-over {
 	font-family: Helvetica Neue;
 	letter-spacing: 1px;
-	font-size: 1vw;
+	font-size: .8vw;
 }
 
 .hover-title {
