share icons and buttons

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -1101,22 +1101,34 @@ canvas, body, html {
 }
 
 .info-contain {
-    height: 24%;
+    height: 40%;
     margin-left: auto;
-    margin-top: 2%;
     margin-right: auto;
+    top: 10%;
     display: flex;
     flex-direction: column;
 
 }
 
-.icon {
-    width: 100%;
-    padding-right: 4%;
+.calendar-info {
+    background-color: #447AC6;
+    margin-bottom: 0px;
+    margin-top: 78px;
 }
 
-.calendar-contain {
-    margin-top: 20px;
+.fb-share-button {
+    background-color: #DFECFE;
+
+}
+
+.google-calendar-button {
+    background-color: #DFECFE;
+
+}
+
+.icon {
+    width: 70px;
+    padding-right: 4%;
 }
 
 .opportunity {
