--- a/templates/views/blog.jade
+++ b/templates/views/blog.jade
@@ -7,6 +7,7 @@ block js
 	script(src="/js/tether-1.3.3/tether.min.js")
 	script(src="/js/drop-1.4.2/drop.min.js")
 	script(src="/js/jquery/fullcalendar.js")
+	script(src="/js/facebook-butt.js")
 	script(async src="//platform.twitter.com/widgets.js")
 
 mixin event(post)
@@ -62,10 +63,16 @@ block content
 			.calendar-events
 				.info-contain
 					ul.calendar-info
+						a(href="https://twitter.com/share" url="https%3A%2F%2fdev.twitter.com%2Fweb%2Ftweet-button&" via="twitterdev&" related="twitterapi%2Ctwitter&" hastags="example%2Cdemo&" text="custom%20share%20text" )
+							img.icon(src="/images/twitter.png")
+					.fb-share-button
+						data(href="http://brainucsb.herokuapp.com/blog/news" data-layout="icon" data-mobile-iframe="true")
+						a(href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fbrainucsb.herokuapp.com%2Fblog%2Fnews&amp;src=sdkpreparse")
+							img.icon(src="/images/fb.png")
+					.google-calendar-button			
 						a(href="https://calendar.google.com/calendar/ical/invepqcvuhsi0alugtasabi69o%40group.calendar.google.com/public/basic.ics")
 							.calendar-contain
-								img.icon(src="/images/calendar.png")
-						a(href="https://twitter.com/share" class="twitter-share-button" data-size="large" data-text="UCSB BRAIN INITIAITVE - Upcoming Events" data-hashtags="#BRI #UCSB #SAGE" data-show-count="false" charset="utf-8")
+								img.icon(src="/images/google-cal.png")
 			#calendar
 
 							
