changed link and removed bottom nav bar

--- a/templates/views/about.jade
+++ b/templates/views/about.jade
@@ -20,7 +20,7 @@ block content
 
 			.federal-container
 				p TO LEARN MORE ABOUT THE FEDERAL BRAIN INITIATIVE 
-					a(href='https://www.whitehouse.gov/brain', target="_blank") 'CLICK HERE'
+					a(href='http://www.kavlifoundation.org/brain-initiative', target="_blank") 'CLICK HERE'
 			.container-team
 				.col-md-3
 					.our-team
@@ -33,7 +33,7 @@ block content
 				.image-container
 					.image-circle
 						a(href="http://brainucsb.herokuapp.com/people/dr-ken-kosik")
-						img(src = "/images/kosik.png" class="team")
+							img(src = "/images/kosik.png" class="team")
 						.portrait-description
 							p Director and Co-Chair
 							p Ken Kosik
