--- a/templates/views/blog.jade
+++ b/templates/views/blog.jade
@@ -63,11 +63,11 @@ block content
 			.calendar-events
 				.info-contain
 					ul.calendar-info
-						a(href="https://twitter.com/share" url="https%3A%2F%2fdev.twitter.com%2Fweb%2Ftweet-button&" via="twitterdev&" related="twitterapi%2Ctwitter&" hastags="example%2Cdemo&" text="custom%20share%20text" )
+						a(href="https://twitter.com/share" url="https%3A%2F%2fdev.twitter.com%2Fweb%2Ftweet-button&" target="_blank" via="twitterdev&" related="twitterapi%2Ctwitter&" hastags="example%2Cdemo&" text="custom%20share%20text")
 							img.icon(src="/images/twitter.png")
 					.fb-share-button
 						data(href="http://brainucsb.herokuapp.com/blog/news" data-layout="icon" data-mobile-iframe="true")
-						a(href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fbrainucsb.herokuapp.com%2Fblog%2Fnews&amp;src=sdkpreparse")
+						a(href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fbrainucsb.herokuapp.com%2Fblog%2Fnews&amp;src=sdkpreparse" target="_blank")
 							img.icon(src="/images/fb.png")
 					.google-calendar-button			
 						a(href="https://calendar.google.com/calendar/ical/invepqcvuhsi0alugtasabi69o%40group.calendar.google.com/public/basic.ics")
